docroot/themes/custom/transac/alshaya_hnm/sass/components/header/_header-primary.scss
/* ... */
.c-menu-primary {
  display: none;

  #block-exposedformsearchpage,
  .block-views-exposed-filter-blocksearch-page {
    display: none;

    label {
      display: none;
    }

    .form-item,
    input {
      width: 100%;
    }

    input {
      padding: 1.0625rem !important;
      border: 0;
      background-image: none;
    }

    #edit-actions,
    #edit-actions--3 {
      display: none;
    }

    form {
      background: $header_blocksearch_bg;
      padding: 0.625rem;
    }
  }

  #block-exposedformsearchpage {
    form {
      @include breakpoint($only-mobile) {
        padding: 0.5625rem;
      }
    }

    input {
      color: $header_blocksearch_input;
      font-family: $hnm-regular;

      @include breakpoint($only-mobile) {
        padding: 0.6875rem !important;
        font-size: 0.625rem;
      }
    }
  }

  @include breakpoint($upto-desktop) {
    display: block;

    a {
      @include arabic-letter-spacing;

      text-decoration: none;
      color: $mm_l1_link;
      font-size: 0.875rem;
      letter-spacing: 1px;
      display: block;
      text-transform: capitalize;
      font-family: $hnm-regular;

      &::before {
        content: ' ';
        display: inline-block;
        vertical-align: middle;
        margin-#{$right}: 0.625rem;
      }
    }

    .store {
      float: $right;
      margin-#{$right}: 1.5625rem;
      position: absolute;
      top: 0.875rem;
      #{$right}: 0.375rem;
      font-size: 0;
      margin-top: 0;
      padding: 0.3125rem 0.875rem 0.664rem 0.625rem;

      @include icon(mappin) {
        color: $mm_mobile_icon;
        width: 1rem;
        height: 1.4375rem;
        font-size: 1.875rem;
        position: relative;
        top: -0.3125rem;
        #{$left}: -0.375rem;
      }

      @include breakpoint($only-mobile) {
        padding-#{$right}: 0;
        #{$right}: 0.875rem;
      }

      @include breakpoint($upto-desktop) {
        html[lang=ar] & {
          font-size: 1px;
        }
      }
    }

    .mobile--menu {
      float: $left;
      padding: 0.625rem 0.5rem;
      margin-top: -0.4rem;
      position: absolute;
      top: 1.125rem;
      font-size: 0;

      &::before {
        background: url('../imgs/icons/ic-menu.svg') no-repeat;
        width: 1.5rem;
        height: 1rem;
      }
    }

    .mobile-search {
      float: $right;
      margin-#{$right}: 1.5625rem;
      position: absolute;
      top: 1.125rem;
      #{$right}: 2.5rem;
      font-size: 0;
      padding-top: 0.3125rem;
    }
  }

  @include breakpoint($only-tablet) {
    .mobile--search {
      display: none;
    }

    .store {
      top: 1.125rem;
      #{$right}: 2.25rem;
    }

    .mobile--menu {
      padding: 1rem 1.515rem;
      padding-#{$right}: 0;
    }
  }

  @include breakpoint($only-mobile) {
    display: block;

    a {
      padding: 0.9rem 0.875rem 0.664rem 0.625rem;
    }

    .store {
      &.is-active {
        &::before {
          color: $mm_mobile_icon_active;
        }
      }
    }

    .mobile--search {
      float: $right;
      margin-#{$right}: 1.0625rem;
      position: absolute;
      #{$right}: 3.25rem;
      top: 0.8125rem;
      font-size: 0;
      padding-top: 0.3125rem;

      html[lang=ar] & {
        font-size: 1px;
      }

      &::before {
        margin-#{$right}: 0.3125rem;
      }
    }

    ul.menu {
      display: table;
      width: 100%;
      margin: 0;
    }

    li {
      &:hover {
        background: none;
      }

      &.search-active {
        .mobile--search {
          &::before {
            color: $mm_mobile_icon_active;
          }
        }
      }

      .mobile--search {
        @include icon(search) {
          color: $mm_mobile_icon;
        }
      }
    }
  }
}

/*
	SITE HEADER - MAIN NAVIGATION
*/
.mobile--menu {
  font-size: 0.75rem;
  color: $black-two;
}

.main--menu {
  @include breakpoint($desktop) {
    display: block !important;
  }

  @include breakpoint($upto-desktop) {
    ul {
      padding: 0;
    }
  }

  li {
    list-style: none;
  }
}
/* ... */

